feat(recipes): list all FP1 files

--- a/.env
+++ b/.env
@@ -7,6 +7,9 @@ APP_URL=http://localhost/fuji-recipe-manager
 APP_ROOT=
 APP_DEBUG=true
 
+# Répertoire des fp1
+FUJI_FP1_DIR=C:\Users\mathi\AppData\Local\com.fujifilm.denji\X_RAW_STUDIO\X-S10\X-S10_0100
+
 # Base de données
 DB_CONNECTION=mysql
 DB_HOST=localhost
